# op-db

./: .gitignore  Cargo.toml  README.md  download-datadir.sh
.github/workflows/: ci.yaml
crates/db-utils/: Cargo.toml  README.md  build.rs  goerli-testdata.sh
crates/db-utils/geth-bind/: .gitignore  Makefile  freezer.go  go.mod  go.sum
crates/db-utils/src/: leveldb.rs  lib.rs
crates/db-utils/src/leveldb/: key.rs  mod.rs
