[package]
name = "op-db-utils"
description = "Utility crate for migrating the legacy pre-bedrock DB to reth's DB format"
edition = "2021"
resolver = "2"

authors.workspace = true
version.workspace = true

[dependencies]
leveldb = { git = "https://github.com/cassc/leveldb", branch = "allow-impl-database-key" }
alloy-primitives = "0.4.2"
alloy-rlp = "0.3.3"
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }

# Misc
anyhow = "1.0.70"
tracing = "0.1.37"
