[package]
name = "op-db-utils"
description = "Utility crate for migrating the legacy pre-bedrock DB to reth's DB format"
edition = "2021"
resolver = "2"

authors.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = "0.4.2"
alloy-rlp = "0.3.3"

# Contains a patch that allows for implementing the `Key` trait, which we need for Geth's variable-length'd DB keys.
leveldb = { git = "https://github.com/cassc/leveldb", branch = "allow-impl-database-key" }

# Contains a patch that allows for 0 signatures, which exist in the legacy DB
reth-primitives = { git = "https://github.com/clabby/reth", branch = "cl/op-legacy-signature" }

# Misc
anyhow = "1.0.70"
tracing = "0.1.37"

[build-dependencies]
bindgen = "0.69.1"
